@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-10-08T01:54:59Z",
+  "timestamp" : "2025-10-09T01:56:01Z",
   "count_outdated" : 274,
   "uniques_outdated" : 240,
-  "count" : 275,
-  "uniques" : 241,
+  "count" : 276,
+  "uniques" : 242,
   "clones" : [
     {
       "timestamp": "2025-10-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
